# api-dish

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  render-deploy.sh
api_cardapio/: __init__.py  config.py  custom_exceptions.py
api_cardapio/controllers/: auth.py  dish.py
api_cardapio/models/: models.py
api_cardapio/routes/: dish.py
api_cardapio/schemas/: dish_schema.py
api_cardapio/serives/: auth_service.py  dish_service.py
api_cardapio/static/: swagger.json  swagger.yaml
instance/: cardapio.db
migrations/versions/: cd935dd5839d_seed_admin_user.py
